<resources>
    <string name="app_name">دوز بازی</string>

    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="btn_Add_friends">Add To Friends</string>
    <string name="one_player">one player</string>
    <string name="two_player">two player</string>
    <string name="comments">comments</string>
    <string name="friends">friends</string>
    <string name="play_game">Play Game</string>
    <string name="send_message">send message</string>
    <string name="block">Block</string>
    <string name="unblock">unblock</string>
    <string name="editprofile">edit profile</string>
    <string name="send">Send</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="repeatpassword">RepeatPassword</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="save_image">save image</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_up">sign up</string>
    <string name="i_have_an_account_login">I Have An Account | Login</string>
    <string name="nobate_shoma">Play ...</string>
    <string name="nobate_harif">Wait ...</string>
    <string name="friends_list">Friends List</string>
    <string name="searching">Searching...</string>

</resources>
