<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:gravity="center"
        android:layout_marginTop="1dp"
        android:textColor="#cdd4ec"
        android:textSize="20sp"/>
    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/account"
        app:mtf_openKeyboardOnFocus="true">
        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:gravity="center"
            android:layout_margin="5dp"
            />
    </com.github.florent37.materialtextfield.MaterialTextField>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/account"
        app:mtf_openKeyboardOnFocus="true">
        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:gravity="center"
            android:layout_margin="5dp"
            android:inputType="" />
    </com.github.florent37.materialtextfield.MaterialTextField>
    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/account"
        app:mtf_openKeyboardOnFocus="true">
    <EditText
        android:id="@+id/edt_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:gravity="center"
        android:inputType="phone"
        android:layout_margin="5dp"/>
    </com.github.florent37.materialtextfield.MaterialTextField>
    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/key"
        app:mtf_openKeyboardOnFocus="true">
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center"
        android:layout_margin="5dp"/>
    </com.github.florent37.materialtextfield.MaterialTextField>
    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/key"
        app:mtf_openKeyboardOnFocus="true">
    <EditText
        android:id="@+id/edt_password_R"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeatpassword"
        android:inputType="textPassword"
        android:gravity="center"
        android:layout_margin="5dp"/>
    </com.github.florent37.materialtextfield.MaterialTextField>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:background="#7c4224"/>
    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_have_an_account_login"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:textColor="#ffffff"
        android:textSize="20sp"/>

</LinearLayout>