<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical"
    android:background="@color/colorPrimary">



    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="20dp"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/account"
        app:mtf_openKeyboardOnFocus="true">
        <EditText
            android:id="@+id/edt_username_L"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:gravity="center"

            />
    </com.github.florent37.materialtextfield.MaterialTextField>
    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="20dp"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/key"
        app:mtf_openKeyboardOnFocus="true">
    <EditText
        android:id="@+id/edt_password_L"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center"

         />
    </com.github.florent37.materialtextfield.MaterialTextField>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="#7c4224"/>
    <TextView
        android:id="@+id/txt_newacount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textColor="#ffffff"
        android:layout_marginTop="24dp"/>

</LinearLayout>