<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Addimage"
    android:orientation="vertical"
    android:background="@color/colorPrimary">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <de.hdodenhof.circleimageview.CircleImageView

        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_user"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/example"
        app:civ_border_width="2dp"
        app:civ_border_color="#ffffff"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <Button
        android:id="@+id/btn_camera"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/cameraicon"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btnGallery"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/galleryicon"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"/>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_image"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:background="@drawable/textviewstyle"/>
</LinearLayout>

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/account"
        app:mtf_openKeyboardOnFocus="true">

    <EditText
        android:id="@+id/edt_Editusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:gravity="center"

        android:enabled="false"/>
    </com.github.florent37.materialtextfield.MaterialTextField>
    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/account"
        app:mtf_openKeyboardOnFocus="true">
    <EditText
        android:id="@+id/edt_Editname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:gravity="center"
        />
    </com.github.florent37.materialtextfield.MaterialTextField>
    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/account"
        app:mtf_openKeyboardOnFocus="true">
    <EditText
        android:id="@+id/edt_EditAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:gravity="center"
        android:inputType="textEmailAddress"
        />
    </com.github.florent37.materialtextfield.MaterialTextField>
    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/key"
        app:mtf_openKeyboardOnFocus="true">
    <EditText
        android:id="@+id/edt_Editpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center"
        />
    </com.github.florent37.materialtextfield.MaterialTextField>
    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/key"
        app:mtf_openKeyboardOnFocus="true">
    <EditText
        android:id="@+id/edt_Editpassword_R"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeatpassword"
        android:inputType="textPassword"
        android:gravity="center"
        />
    </com.github.florent37.materialtextfield.MaterialTextField>

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#7c4224"/>
</LinearLayout>