<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="300dp"
    tools:context=".EditProfile"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/infoback">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                >

    <de.hdodenhof.circleimageview.CircleImageView

        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_user_show"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_background"
        app:civ_border_width="2dp"
        app:civ_border_color="#5e0d0d"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/txt_name_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:textColor="#732808"
        android:gravity="center"
        android:layout_margin="5dp"
        android:visibility="visible"/>


    <TextView
        android:id="@+id/txt_age_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="26"
        android:textColor="#732808"
        android:gravity="center"
        android:layout_margin="5dp"
        android:visibility="visible"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >


    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/btn_Add_friends"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:background="@drawable/btn"/>
        <Button
            android:id="@+id/btn_game"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/play_game"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:background="@drawable/btn"/>


                    <Button
                        android:id="@+id/btn_send_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/send_message"
                        android:textColor="#ffffff"
                        android:layout_gravity="center"
                        android:background="@drawable/btn"/>
                    <Button
                        android:id="@+id/btn_block"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/block"
                        android:textColor="#ffffff"
                        android:layout_gravity="center"
                        android:background="@drawable/btn"/>

            </LinearLayout>
            </LinearLayout>

</LinearLayout>