<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7"
        android:visibility="visible"
        android:background="@drawable/boardback"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:layout_alignParentRight="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txt_toolbar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginRight="20dp"
                    android:gravity="bottom"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true" android:background="@drawable/emailicon"/>
                <ImageView
                    android:id="@+id/img_editprof"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:layout_alignParentLeft="true" android:background="@drawable/language"/>
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

</RelativeLayout>

    <LinearLayout
        android:id="@+id/con_main"
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
          android:layout_marginTop="30dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/text"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_marginTop="30dp">



            <Button
                android:id="@+id/btn_2player"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/two_player"
                android:textSize="24sp"
                android:fontFamily="@font/forte"
                android:textColor="#ffffff"
                android:background="@drawable/btnback1"
                />
            <Button
                android:id="@+id/btn_1player"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/one_player"
                android:textSize="24sp"
                android:fontFamily="@font/forte"
                android:textColor="#ffffff"
                android:background="@drawable/btnback1"
               />
            <Button
                android:id="@+id/btn_comments"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/comments"
                android:textSize="24sp"
                android:fontFamily="@font/forte"
                android:textColor="#ffffff"
                android:background="@drawable/btnback1"
                />
            <Button
                android:id="@+id/btn_friends"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/btnback1"
                android:textSize="24sp"
                android:fontFamily="@font/forte"
                android:text="@string/friends"
                android:textColor="#ffffff"
                />
            <Button
                android:id="@+id/btn_editprofile"
                android:layout_width="220dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/btnback1"
                android:textSize="24sp"
                android:fontFamily="@font/forte"
                android:text="@string/editprofile"
                android:textColor="#ffffff"
                />

        </LinearLayout>

    </LinearLayout>








</RelativeLayout>